add: like-button functionality, text-wrap on .grid

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li class="photo-grid__element">
             <img class="photo-grid__picture" src="pictures/karachayevsk.jpg" alt="Карачаевск" />
             <div class="photo-grid__description-bar">
-              <h3 class="photo-grid__description">Карачаевск</h3>
+              <h3 class="photo-grid__description">Карачаево-черкессия</h3>
               <img class="like-button" src="pictures/like_disabled.svg" />
             </div>
           </li>
