--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <main class="main">
       <section class="profile">
         <img class="profile__image" src="images/avatar.png" />
-        <div class="profile__info">
-          <div class="profile__name">
+        <div class="profile__personal-data">
+          <div class="profile__name-block">
             <h2 class="profile__username">Жак-Ив Кусто</h2>
             <img class="button button_type_edit" src="images/Edit-Button.svg" alt="Изменить" />
           </div>
-          <p class="profile__user-job">Исследователь океана</p>
+          <p class="profile__job">Исследователь океана</p>
         </div>
         <div class="button button_type_add">
           <img class="button__plus-icon" src="images/add_plus.svg" alt="Добавить" />
@@ -45,42 +45,42 @@
             <img class="photo-grid__picture" src="images/karachayevsk.jpg" alt="Карачаевск" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Карачаевск</h3>
-              <img class="like-button" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="images/like_disabled.svg" />
             </div>
           </li>
           <li class="photo-grid__element">
             <img class="photo-grid__picture" src="images/elbrus.jpg" alt="Эльбрус" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Гора Эльбрус</h3>
-              <img class="like-button" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="images/like_disabled.svg" />
             </div>
           </li>
           <li class="photo-grid__element">
             <img class="photo-grid__picture" src="images/dombai.jpg" alt="Домбаи" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Домбаи</h3>
-              <img class="like-button" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="images/like_disabled.svg" />
             </div>
           </li>
           <li class="photo-grid__element">
             <img class="photo-grid__picture" src="images/elbrus.jpg" alt="Эльбрус" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Гора Эльбрус</h3>
-              <img class="like-button" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="images/like_disabled.svg" />
             </div>
           </li>
           <li class="photo-grid__element">
             <img class="photo-grid__picture" src="images/dombai.jpg" alt="Домбаи" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Домбаи</h3>
-              <img class="like-button" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="images/like_disabled.svg" />
             </div>
           </li>
           <li class="photo-grid__element">
             <img class="photo-grid__picture" src="images/karachayevsk.jpg" alt="Карачаевск" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Карачаево-черкессия</h3>
-              <img class="like-button" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="images/like_disabled.svg" />
             </div>
           </li>
         </ul>
