--- a/index.html
+++ b/index.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Место</title>
-    <link rel="stylesheet" href="pages/index.css" />
+    <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="root">
     <header class="header">
-      <img class="logo" src="images/header.svg" alt="логотип Место" />
+      <img class="logo" src="./images/header.svg" alt="логотип Место" />
     </header>
     <main class="main">
       <section class="profile">
-        <img class="profile__image" src="images/avatar.png" />
+        <img class="profile__image" src="./images/avatar.png" />
         <div class="profile__personal-data">
           <div class="profile__name-block">
             <h2 class="profile__username">Жак-Ив Кусто</h2>
-            <img class="button button_type_edit" src="images/Edit-Button.svg" alt="Изменить" />
+            <img class="button button_type_edit" src="./images/Edit-Button.svg" alt="Изменить" />
           </div>
           <p class="profile__job">Исследователь океана</p>
         </div>
         <div class="button button_type_add">
-          <img class="button__plus-icon" src="images/add_plus.svg" alt="Добавить" />
+          <img class="button__plus-icon" src="./images/add_plus.svg" alt="Добавить" />
         </div>
       </section>
       <section class="popup">
         <div class="popup__content">
-          <img class="button button_type_cancel" src="images/cancel_button.svg" alt="Отмена" />
+          <img class="button button_type_cancel" src="./images/cancel_button.svg" alt="Отмена" />
           <div class="popup__container">
             <h2 class="popup__heading">Редактировать профиль</h2>
             <input type="text" placeholder="Ваше имя" class="popup__input popup__input_type_name" />
@@ -42,45 +42,45 @@
       <section class="posts">
         <ul class="photo-grid">
           <li class="photo-grid__element">
-            <img class="photo-grid__picture" src="images/karachayevsk.jpg" alt="Карачаевск" />
+            <img class="photo-grid__picture" src="./images/karachayevsk.jpg" alt="Карачаевск" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Карачаевск</h3>
-              <img class="button button_type_like" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="./images/like_disabled.svg" />
             </div>
           </li>
           <li class="photo-grid__element">
-            <img class="photo-grid__picture" src="images/elbrus.jpg" alt="Эльбрус" />
+            <img class="photo-grid__picture" src="./images/elbrus.jpg" alt="Эльбрус" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Гора Эльбрус</h3>
-              <img class="button button_type_like" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="./images/like_disabled.svg" />
             </div>
           </li>
           <li class="photo-grid__element">
-            <img class="photo-grid__picture" src="images/dombai.jpg" alt="Домбаи" />
+            <img class="photo-grid__picture" src="./images/dombai.jpg" alt="Домбаи" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Домбаи</h3>
-              <img class="button button_type_like" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="./images/like_disabled.svg" />
             </div>
           </li>
           <li class="photo-grid__element">
-            <img class="photo-grid__picture" src="images/elbrus.jpg" alt="Эльбрус" />
+            <img class="photo-grid__picture" src="./images/elbrus.jpg" alt="Эльбрус" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Гора Эльбрус</h3>
-              <img class="button button_type_like" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="./images/like_disabled.svg" />
             </div>
           </li>
           <li class="photo-grid__element">
-            <img class="photo-grid__picture" src="images/dombai.jpg" alt="Домбаи" />
+            <img class="photo-grid__picture" src="./images/dombai.jpg" alt="Домбаи" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Домбаи</h3>
-              <img class="button button_type_like" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="./images/like_disabled.svg" />
             </div>
           </li>
           <li class="photo-grid__element">
-            <img class="photo-grid__picture" src="images/karachayevsk.jpg" alt="Карачаевск" />
+            <img class="photo-grid__picture" src="./images/karachayevsk.jpg" alt="Карачаевск" />
             <div class="photo-grid__description-bar">
               <h3 class="photo-grid__description">Карачаево-черкессия</h3>
-              <img class="button button_type_like" src="images/like_disabled.svg" />
+              <img class="button button_type_like" src="./images/like_disabled.svg" />
             </div>
           </li>
         </ul>
@@ -89,6 +89,6 @@
     <footer class="footer">
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
