--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
         <h2 class="popup__picture-caption"></h2>
       </div>
     </section>
+    <template class="cardTemplate">
+      <li class="photo-grid__element">
+        <button class="photo-grid__delete-button" type="button"></button>
+        <img class="photo-grid__picture" src=" " alt=" " />
+        <div class="photo-grid__description-bar">
+          <h2 class="photo-grid__description"></h2>
+          <button class="photo-grid__like-button" type="button"></button>
+        </div>
+      </li>
+    </template>
     <script src="scripts/index.js"></script>
   </body>
 </html>
