--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Место</title>
     <link rel="stylesheet" href="./pages/index.css" />
+    <script defer type="module" src="scripts/constants.js"></script>
+    <script defer type="module" src="scripts/index.js"></script>
+    <script defer type="module" src="scripts/validate.js"></script>
   </head>
   <body class="root">
     <header class="header">
@@ -16,11 +19,19 @@
         <div class="profile__personal-data">
           <div class="profile__name-block">
             <h1 class="profile__username">Жак-Ив Кусто</h1>
-            <button class="profile__button profile__button_type_edit" type="button"></button>
+            <button
+              aria-label="Редактировать профиль"
+              class="profile__button profile__button_type_edit"
+              type="button"
+            ></button>
           </div>
           <p class="profile__job">Исследователь океана</p>
         </div>
-        <button class="profile__button profile__button_type_add" type="button"></button>
+        <button
+          aria-label="Добавить карточку"
+          class="profile__button profile__button_type_add"
+          type="button"
+        ></button>
       </section>
       <section class="posts">
         <ul class="photo-grid"></ul>
@@ -31,7 +42,11 @@
     </footer>
     <section class="popup popup_type_edit">
       <div class="popup__container">
-        <button class="popup__button popup__button_type_cancel" type="button"></button>
+        <button
+          aria-label="Закрыть"
+          class="popup__button popup__button_type_cancel"
+          type="button"
+        ></button>
         <div class="popup__content">
           <h2 class="popup__heading">Редактировать профиль</h2>
           <form class="popup__form" name="user-info" novalidate>
@@ -66,7 +81,11 @@
     </section>
     <section class="popup popup_type_add">
       <div class="popup__container">
-        <button class="popup__button popup__button_type_cancel" type="button"></button>
+        <button
+          aria-label="Закрыть"
+          class="popup__button popup__button_type_cancel"
+          type="button"
+        ></button>
         <div class="popup__content">
           <h2 class="popup__heading">Новое Место</h2>
           <form class="popup__form" name="place-info" novalidate>
@@ -99,14 +118,18 @@
     </section>
     <section class="popup popup_type_picture">
       <div class="popup__container">
-        <button class="popup__button popup__button_type_cancel" type="button"></button>
+        <button
+          aria-label="Закрыть"
+          class="popup__button popup__button_type_cancel"
+          type="button"
+        ></button>
         <img class="popup__picture" src=" " alt=" " />
         <h2 class="popup__picture-caption"></h2>
       </div>
     </section>
     <template class="cardTemplate">
       <li class="photo-grid__element">
-        <button class="photo-grid__delete-button" type="button"></button>
+        <button aria-label="Удалить" class="photo-grid__delete-button" type="button"></button>
         <img class="photo-grid__picture" src=" " alt=" " />
         <div class="photo-grid__description-bar">
           <h2 class="photo-grid__description"></h2>
@@ -114,7 +137,5 @@
         </div>
       </li>
     </template>
-    <script src="scripts/index.js"></script>
-    <script src="scripts/validate.js"></script>
   </body>
 </html>
