--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./pages/index.css" />
     <script defer type="module" src="scripts/constants.js"></script>
     <script defer type="module" src="scripts/index.js"></script>
-    <script defer type="module" src="scripts/validate.js"></script>
+    <script defer type="module" src="scripts/card.js"></script>
+    <script defer type="module" src="scripts/formValidator.js"></script>
   </head>
   <body class="root">
     <header class="header">
