edited: class files' casing to uppercase         removed import from Card.js         card generation is a method now

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./pages/index.css" />
     <script defer type="module" src="scripts/constants.js"></script>
     <script defer type="module" src="scripts/index.js"></script>
-    <script defer type="module" src="scripts/card.js"></script>
-    <script defer type="module" src="scripts/formValidator.js"></script>
+    <script defer type="module" src="scripts/Card.js"></script>
+    <script defer type="module" src="scripts/FormValidator.js"></script>
   </head>
   <body class="root">
     <header class="header">
