--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Место</title>
-    <link rel="stylesheet" href="./pages/index.css" />
-    <script defer type="module" src="scripts/constants.js"></script>
-    <script defer type="module" src="scripts/index.js"></script>
-    <script defer type="module" src="scripts/Card.js"></script>
-    <script defer type="module" src="scripts/FormValidator.js"></script>
   </head>
   <body class="root">
     <header class="header">
@@ -124,14 +119,14 @@
           class="popup__button popup__button_type_cancel"
           type="button"
         ></button>
-        <img class="popup__picture" src=" " alt=" " />
+        <img class="popup__picture" src="%" alt=" " />
         <h2 class="popup__picture-caption"></h2>
       </div>
     </section>
     <template class="cardTemplate">
       <li class="photo-grid__element">
         <button aria-label="Удалить" class="photo-grid__delete-button" type="button"></button>
-        <img class="photo-grid__picture" src=" " alt=" " />
+        <img class="photo-grid__picture" src="%" alt=" " />
         <div class="photo-grid__description-bar">
           <h2 class="photo-grid__description"></h2>
           <button class="photo-grid__like-button" type="button"></button>
