--- a/src/index.html
+++ b/src/index.html
@@ -49,26 +49,26 @@
             <label class="popup__form-field">
               <input
                 type="text"
-                name="username"
+                name="name"
                 placeholder="Имя"
                 class="popup__input popup__input_type_name"
                 required
                 minlength="2"
                 maxlength="40"
               />
-              <span class="popup__form-input-error username-error"></span>
+              <span class="popup__form-input-error name-error"></span>
             </label>
             <label class="popup__form-field">
               <input
                 type="text"
-                name="user-job"
+                name="job"
                 placeholder="О себе"
                 class="popup__input popup__input_type_job"
                 required
                 minlength="2"
                 maxlength="200"
               />
-              <span class="popup__form-input-error user-job-error"></span>
+              <span class="popup__form-input-error job-error"></span>
             </label>
             <button class="popup__button popup__button_type_submit" type="submit">Сохранить</button>
           </form>
