--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,12 @@
     </header>
     <main class="main">
       <section class="profile">
-        <img class="profile__image" src="./images/avatar.png" alt="аватар" />
+        <div class="profile__icon">
+          <img class="profile__icon-image" src="#" alt="аватар" />
+          <div class="profile__icon-overlay">
+            <img clas="profile__hover-picture" src="./images/edit-icon.png" alt="Смена аватара" />
+          </div>
+        </div>
         <div class="profile__personal-data">
           <div class="profile__name-block">
             <h1 class="profile__username">Жак-Ив Кусто</h1>
@@ -119,17 +124,58 @@
           class="popup__button popup__button_type_cancel"
           type="button"
         ></button>
-        <img class="popup__picture" src="%" alt=" " />
+        <img class="popup__picture" src="%" alt="%" />
         <h2 class="popup__picture-caption"></h2>
+      </div>
+    </section>
+    <section class="popup popup_type_delete-card">
+      <div class="popup__container">
+        <div class="popup__content">
+          <button
+            aria-label="Закрыть"
+            class="popup__button popup__button_type_cancel"
+            type="button"
+          ></button>
+          <h2 class="popup__heading popup__heading_type_delete-card">Вы уверены?</h2>
+          <button class="popup__button popup__button_type_submit" type="submit">Да</button>
+        </div>
+      </div>
+    </section>
+    <section class="popup popup_type_edit-avatar">
+      <div class="popup__container">
+        <div class="popup__content">
+          <button
+            aria-label="Закрыть"
+            class="popup__button popup__button_type_cancel"
+            type="button"
+          ></button>
+          <h2 class="popup__heading">Обновить аватар</h2>
+          <form class="popup__form" name="avatar" novalidate>
+            <label class="popup__form-field">
+              <input
+                type="url"
+                name="avatar-link"
+                placeholder="Ссылка на картинку"
+                class="popup__input popup__input_type_avatar-link"
+                required
+              />
+              <span class="popup__form-input-error avatar-link-error"></span>
+            </label>
+            <button class="popup__button popup__button_type_submit" type="submit">Создать</button>
+          </form>
+        </div>
       </div>
     </section>
     <template class="cardTemplate">
       <li class="photo-grid__element">
         <button aria-label="Удалить" class="photo-grid__delete-button" type="button"></button>
-        <img class="photo-grid__picture" src="%" alt=" " />
+        <img class="photo-grid__picture" src="%" alt="%" />
         <div class="photo-grid__description-bar">
           <h2 class="photo-grid__description"></h2>
-          <button class="photo-grid__like-button" type="button"></button>
+          <div class="photo-grid__like-container">
+            <button class="photo-grid__like-button" type="button"></button>
+            <p class="photo-grid__like-counter">1</p>
+          </div>
         </div>
       </li>
     </template>
