ref: popups - form/image; FormValidator, Card; UserInfo provides all user information

--- a/src/index.html
+++ b/src/index.html
@@ -66,14 +66,14 @@
             <label class="popup__form-field">
               <input
                 type="text"
-                name="job"
+                name="about"
                 placeholder="О себе"
                 class="popup__input popup__input_type_job"
                 required
                 minlength="2"
                 maxlength="200"
               />
-              <span class="popup__form-input-error job-error"></span>
+              <span class="popup__form-input-error about-error"></span>
             </label>
             <button class="popup__button popup__button_type_submit" type="submit">Сохранить</button>
           </form>
@@ -93,24 +93,24 @@
             <label class="popup__form-field">
               <input
                 type="text"
-                name="place-name"
+                name="placeName"
                 placeholder="Название"
                 class="popup__input popup__input_type_place-name"
                 minlength="2"
                 maxlength="30"
                 required
               />
-              <span class="popup__form-input-error place-name-error"></span>
+              <span class="popup__form-input-error placeName-error"></span>
             </label>
             <label class="popup__form-field">
               <input
                 type="url"
-                name="place-link"
+                name="placeLink"
                 placeholder="Ссылка на картинку"
                 class="popup__input popup__input_type_place-link"
                 required
               />
-              <span class="popup__form-input-error place-link-error"></span>
+              <span class="popup__form-input-error placeLink-error"></span>
             </label>
             <button class="popup__button popup__button_type_submit" type="submit">Создать</button>
           </form>
