--- a/src/index.html
+++ b/src/index.html
@@ -154,12 +154,12 @@
             <label class="popup__form-field">
               <input
                 type="url"
-                name="avatar-link"
+                name="avatarLink"
                 placeholder="Ссылка на картинку"
                 class="popup__input popup__input_type_avatar-link"
                 required
               />
-              <span class="popup__form-input-error avatar-link-error"></span>
+              <span class="popup__form-input-error avatarLink-error"></span>
             </label>
             <button class="popup__button popup__button_type_submit" type="submit">Создать</button>
           </form>
